Fix SDL2 library exporting

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -5,9 +5,9 @@ if (SDL_VERSION EQUAL "2")
 	include(FindPkgConfig)
 	pkg_search_module(SDL2 sdl2)
 	if (SDL2_FOUND)
-		set(SDL_INCLUDE_DIR ${SDL2_INCLUDE_DIRS})
-		set(SDL_LIBRARY ${SDL2_LIBRARIES})
-		set(SDLMAIN_LIBRARY "")
+		set(SDL_INCLUDE_DIR ${SDL2_INCLUDE_DIRS} CACHE INTERNAL "")
+		set(SDL_LIBRARY ${SDL2_LIBRARIES} CACHE INTERNAL "")
+		set(SDLMAIN_LIBRARY "" CACHE INTERNAL "")
 		link_directories(${SDL2_LIBDIR})
 	endif()
 endif()
