SDL: Unify gl-main and sw-main

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -35,10 +35,9 @@ if(BUILD_RASPI)
 	install(TARGETS ${BINARY_NAME}-rpi DESTINATION bin)
 endif()
 
-if(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
-	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-main.c)
-else()
-	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-main.c)
+set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/main.c)
+if(NOT BUILD_BBB AND NOT BUILD_RASPI AND BUILD_GL)
+	add_definitions(-DBUILD_GL)
 	find_package(OpenGL REQUIRED)
 	include_directories(${OPENGL_INCLUDE_DIR})
 endif()
