--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -36,7 +36,10 @@ if(BUILD_RASPI)
 endif()
 
 set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/main.c)
-if(NOT BUILD_BBB AND NOT BUILD_RASPI AND BUILD_GL)
+if(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
+	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl.c)
+else()
+	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-sdl.c)
 	add_definitions(-DBUILD_GL)
 	find_package(OpenGL REQUIRED)
 	include_directories(${OPENGL_INCLUDE_DIR})
