SDL: Merge egl-main

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -26,16 +26,18 @@ file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
 set(PLATFORM_LIBRARY ${SDL_LIBRARY} ${SDLMAIN_LIBRARY})
 include_directories(${CMAKE_SOURCE_DIR}/src/platform/sdl ${SDL_INCLUDE_DIR})
 
+set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/main.c)
+
 if(BUILD_RASPI)
 	add_definitions(-DBUILD_RASPI)
-	set(EGL_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/egl-main.c)
+	set(EGL_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/egl-sdl.c)
 	set(EGL_LIBRARY "-lEGL -lGLESv2 -lbcm_host")
-	add_executable(${BINARY_NAME}-rpi ${PLATFORM_SRC} ${EGL_MAIN_SRC})
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fgnu89-inline")
+	add_executable(${BINARY_NAME}-rpi ${PLATFORM_SRC} ${MAIN_SRC} ${EGL_MAIN_SRC})
 	target_link_libraries(${BINARY_NAME}-rpi ${BINARY_NAME} ${PLATFORM_LIBRARY} ${EGL_LIBRARY})
 	install(TARGETS ${BINARY_NAME}-rpi DESTINATION bin)
 endif()
 
-set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/main.c)
 if(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
 	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl.c)
 else()
