--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(USE_GDB_STUB ON CACHE BOOL "Whether or not to enable the GDB stub ARM debugg
 set(USE_FFMPEG ON CACHE BOOL "Whether or not to enable FFmpeg support")
 set(USE_PNG ON CACHE BOOL "Whether or not to enable PNG support")
 set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable ZIP support")
+set(USE_MAGICK ON CACHE BOOL "Whether or not to enable ImageMagick support")
 set(BUILD_QT ON CACHE BOOL "Build Qt frontend")
 set(BUILD_SDL ON CACHE BOOL "Build SDL frontend")
 set(BUILD_PERF OFF CACHE BOOL "Build performance profiling tool")
@@ -86,6 +87,7 @@ find_feature(USE_CLI_DEBUGGER "libedit")
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
 find_feature(USE_PNG "ZLIB;PNG")
 find_feature(USE_LIBZIP "libzip")
+find_feature(USE_MAGICK "MagickWand")
 
 include(CheckFunctionExists)
 check_function_exists(strndup HAVE_STRNDUP)
@@ -142,6 +144,14 @@ if(USE_FFMPEG)
 	list(APPEND DEPENDENCY_LIB ${LIBAVCODEC_LIBRARIES} ${LIBAVFORMAT_LIBRARIES} ${LIBAVRESAMPLE_LIBRARIES} ${LIBAVUTIL_LIBRARIES} ${LIBSWSCALE_LIBRARIES})
 endif()
 
+if(USE_MAGICK)
+	add_definitions(-DUSE_MAGICK)
+	include_directories(AFTER ${MAGICKWAND_INCLUDE_DIRS})
+	link_directories(${MAGICKWAND_LIBRARY_DIRS})
+	list(APPEND UTIL_SRC "${CMAKE_SOURCE_DIR}/src/platform/imagemagick/imagemagick-gif-encoder.c")
+	list(APPEND DEPENDENCY_LIB ${MAGICKWAND_LIBRARIES})
+endif()
+
 if(USE_PNG)
 	add_definitions(-DUSE_PNG)
 	include_directories(AFTER ${PNG_INCLUDE_DIRS})
@@ -195,6 +205,7 @@ message(STATUS "Feature summary:")
 message(STATUS "	CLI debugger: ${USE_CLI_DEBUGGER}")
 message(STATUS "	GDB stub: ${USE_GDB_STUB}")
 message(STATUS "	Video recording: ${USE_FFMPEG}")
+message(STATUS "	GIF recording: ${USE_MAGICK}")
 message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
 message(STATUS "	ZIP support: ${USE_LIBZIP}")
 message(STATUS "Frontend summary:")
