--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -11,7 +11,7 @@ if(BUILD_SDL)
 		link_directories(${SDL2_LIBDIR})
 	endif()
 	set(PLATFORM_LIBRARY "${PLATFORM_LIBRARY};${SDL_LIBRARY};${SDLMAIN_LIBRARY}")
-	set(PLATFORM_SRC ${PLATFORM_SRC} ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-events.c)
+	set(PLATFORM_SRC ${PLATFORM_SRC} ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-events.c ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-audio.c)
 	include_directories(${SDL_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/src/platform/sdl)
 endif()
 
@@ -23,7 +23,8 @@ find_package(Qt5OpenGL)
 find_package(Qt5Widgets)
 find_package(OpenGL)
 
-if(NOT Qt5Multimedia_FOUND OR NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
+if(NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
+	message(WARNING "Cannot find Qt modules")
 	set(BUILD_QT OFF PARENT_SCOPE)
 	return()
 endif()
@@ -52,6 +53,16 @@ qt5_wrap_ui(UI_FILES
 	LogView.ui
 	VideoView.ui)
 
+if(BUILD_SDL)
+	list(APPEND SOURCE_FILES AudioProcessorSDL.cpp)
+elseif(Qt5Multimedia_FOUND)
+	list(APPEND SOURCE_FILES AudioProcessorQt.cpp)
+else()
+	message(WARNING "No supported audio modules found")
+	set(BUILD_QT OFF PARENT_SCOPE)
+	return()
+endif()
+
 if(USE_GDB_STUB)
 	set(SOURCE_FILES ${PLATFORM_SRC} ${SOURCE_FILES} GDBController.cpp GDBWindow.cpp)
 endif()
@@ -68,5 +79,8 @@ endif()
 add_executable(mGBA WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES} ${UI_FILES} ${RESOURCES})
 set_target_properties(mGBA PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/res/info.plist.in)
 
-qt5_use_modules(mGBA Widgets Multimedia OpenGL)
+qt5_use_modules(mGBA Widgets OpenGL)
+if(Qt5Multimedia_FOUND)
+	qt5_use_modules(mGBA Multimedia)
+endif()
 target_link_libraries(mGBA ${PLATFORM_LIBRARY} ${OPENGL_LIBRARY} ${BINARY_NAME} Qt5::Widgets)
