All: Add CPack variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,16 @@ if(BUILD_PERF)
 	install(FILES ${CMAKE_SOURCE_DIR}/tools/perf.py DESTINATION "${CMAKE_INSTALL_LIBDIR}/${BINARY_NAME}")
 endif()
 
+# Packaging
+set(CPACK_PACKAGE_VERSION_MAJOR ${LIB_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${LIB_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${LIB_VERSION_PATCH})
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
+
+set(CPACK_STRIP_FILES ${BINARY_NAME})
+
+include(CPack)
+
 # Summaries
 message(STATUS "Feature summary:")
 message(STATUS "	CLI debugger: ${USE_CLI_DEBUGGER}")
