--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,9 @@ if(WIN32)
 	list(APPEND OS_LIB ws2_32)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/windows/*.c)
 	source_group("Windows-specific code" FILES ${OS_SRC})
+elseif(3DS)
+	add_definitions(-D__3DS)
+	list(APPEND OS_LIB ctru)
 else()
 	add_definitions(-DUSE_PTHREADS)
 	list(APPEND OS_LIB pthread)
