3DS: Add VFile3DS type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ elseif(UNIX)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(3DS)
 	list(APPEND OS_LIB ctru)
-	list(APPEND OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/memory.c)
+	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/3ds-*.c)
 	source_group("3DS-specific code" FILES ${OS_SRC})
 	set(BINARY_TYPE STATIC)
 endif()
