All: Fix build on OS X when the 10.7 SDK is missing, due to CMake being overzealous

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,8 +114,7 @@ else()
 endif()
 
 if(APPLE)
-	set(CMAKE_OSX_DEPLOYMENT_TARGET "10.7")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmacosx-version-min=10.7 -stdlib=libc++")
 endif()
 
 if(BUILD_BBB OR BUILD_RASPI)
