3DS: Working main loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,8 @@ elseif(UNIX)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(3DS)
+	enable_language(ASM)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	list(APPEND OS_LIB ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/3ds-*.c)
 	source_group("3DS-specific code" FILES ${OS_SRC})
