--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -9,18 +9,22 @@ if (SDL_VERSION EQUAL "2")
 		set(SDL_LIBRARY ${SDL2_LIBRARIES} CACHE INTERNAL "")
 		set(SDLMAIN_LIBRARY "" CACHE INTERNAL "")
 		link_directories(${SDL2_LIBDIR})
+		set(SDL_VERSION_DEBIAN "2-2.0-0")
 	endif()
 endif()
 
 if(SDL_VERSION EQUAL "1.2" OR NOT SDL2_FOUND)
 	find_package(SDL 1.2)
 	set(SDL_VERSION "1.2" PARENT_SCOPE)
+	set(SDL_VERSION_DEBIAN "1.2debian")
 endif()
 
 if (NOT SDL2_FOUND AND NOT SDL_FOUND)
 	set(BUILD_SDL OFF PARENT_SCOPE)
 	return()
 endif()
+
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libsdl${SDL_VERSION_DEBIAN}" PARENT_SCOPE)
 
 file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
 set(PLATFORM_LIBRARY ${SDL_LIBRARY} ${SDLMAIN_LIBRARY})
